# backend/app/serializers/contact_nickname_list_resource.rb
@@ -1,0 +1,5 @@
+class ContactNicknameListResource < ApplicationResource
+  attribute :nicknames do
+    object.nicknames.map { |nickname| ContactNicknameResource.new(nickname).to_h }
+  end
+end
