# backend/app/serializers/contact_nickname_resource.rb
@@ -1,0 +1,7 @@
+class ContactNicknameResource < ApplicationResource
+  attributes :nickname
+
+  attribute :account do
+    AccountResource.new(object.target_account).to_h
+  end
+end
