# backend/app/serializers/device_session_list_resource.rb
@@ -1,0 +1,7 @@
+class DeviceSessionListResource < ApplicationResource
+  attribute :sessions do
+    object.sessions.map do |session|
+      DeviceSessionResource.new(session, params: { current_jti: object.current_jti }).to_h
+    end
+  end
+end
